force-app/main/default/objects/EcoProgram__c/EcoProgram__c.object-meta.xml
<CustomObject>
    <label>EcoProgram</label>
    <nameField>
        <label>EcoProgram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EcoPrograms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>