force-app/main/default/objects/EcoProgram__c/fields/Program_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Program_Image_URL__c</fullName>
    <label>Program Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>