force-app/main/default/objects/EcoProgram__c/fields/Total_Drives__c.field-meta.xml
<CustomField>
    <fullName>Total_Drives__c</fullName>
    <label>Total Drives</label>
    <summaryForeignKey>EcoDrive__c.EcoProgram__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>