force-app/main/default/objects/EcoProgram__c/validationRules/Completed_Program_Cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Program_Cannot_be_edited</fullName>
    <active>true</active>
    <description>User cannot edit a completed program unless he/she is a system admin.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE( Status__c ), 
     &quot;Completed&quot;),
    NOT( $Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>Completed Program cannot be modified.</errorMessage>
</ValidationRule>