force-app/main/default/objects/EcoProgram__c/validationRules/Program_cannot_be_completed_without_any.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_cannot_be_completed_without_any</fullName>
    <active>true</active>
    <description>Program cannot be completed without any drives.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    Total_Drives__c = 0
)</errorConditionFormula>
    <errorMessage>Program cannot be completed without any drives.</errorMessage>
</ValidationRule>