force-app/main/default/objects/EcoProgram__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Drives__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>